--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -11,6 +11,10 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.0
   provider: ^4.3.2+3
+  pedantic: ^1.9.2
+  anitex: ^1.0.1
+  dio: ^3.0.10
+  cached_network_image: ^2.4.1
   isolator:
     path: ./../
 
