--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   anitex: ^1.0.1
   dio: ^3.0.10
   cached_network_image: ^2.4.1
+  flutter_fps: ^0.1.1
+  statsfl: ^1.1.0+3
   isolator:
     path: ./../
 
