--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   cached_network_image: ^2.4.1
   flutter_fps: ^0.1.1
   statsfl: ^1.1.0+3
+  string_similarity: ^1.1.0
+  path_provider: ^1.6.24
   isolator:
     path: ./../
 
