--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,18 +1,18 @@
 name: isolator
 description: Isolator is a package, which offer to you a simple way for creating two-component states with isolated part and frontend part of any kind - BLoC, MobX, ChangeNotifier and others
-version: 0.0.4
+version: 0.0.5
 
 repository: https://github.com/alphamikle/isolator
 homepage: https://github.com/alphamikle/isolator
 
 environment:
-  sdk: ">=2.9.0 <3.0.0"
-  flutter: ">=1.17.0 <2.0.0"
+  sdk: ">=2.12.0"
+  flutter: ">=2.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  pedantic: ^1.9.2
+  pedantic: ^1.11.0
 
 dev_dependencies:
   flutter_test:
