--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,7 @@ repository: https://github.com/alphamikle/isolator
 homepage: https://github.com/alphamikle/isolator
 
 environment:
-  sdk: ">=2.12.0"
+  sdk: ">=2.12.0 <3.0.0"
   flutter: ">=2.0.0"
 
 dependencies:
