--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,9 @@
 name: isolator
 description: Isolator is a package, which offer to you a simple way for creating two-component states with isolated part and frontend part of any kind - BLoC, MobX, ChangeNotifier and others
-version: 2.0.0
+version: 2.0.1
 
 repository: https://github.com/alphamikle/isolator
-homepage: https://github.com/alphamikle/isolator
+homepage: https://alphamikle.github.io/high_low/#/
 
 environment:
   sdk: ">=2.15.0 <3.0.0"
