--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -1,7 +1,8 @@
-name: Pipeline
-run-name: Pipeline
-on: [push]
-
+name: Just a pipeline
+on: push
 jobs:
-  - name: Upload coverage reports to Codecov
-    uses: codecov/codecov-action@v3
+  codecov:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v3
